@@ -1,12 +1,14 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - Don't show right-click menu when there is no shell
+
 Version 3.1.1, Jun 09, 2008
 ---------------------------
 
  - new plugin textline_reading_order() in category "Page Segmentation"
 
- - corrected the moments() feature to actually return 
+ - corrected the moments() feature to actually return
    the normalized central moments
 
  - fixed a severe bug in the rotate() function
